z-index fighting fix

--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 2000;
   background-color: #4ac6e6;
   border: 3px dashed #4ac6e6;
   text-shadow: 1px 1px 2px #d9d9d9;
@@ -234,6 +234,10 @@ a {
 
 #loading {
   display: block;
+}
+
+#scenario {
+  z-index: 1001;
 }
 
 
